<resources>
    <!--Non Translatable -->
    <string name="dark_themes_key" translatable="false">Dark Themes</string>
    <string name="app_name" translatable="false">Github User</string>
    <string name="public_repos" translatable="false">Repositories</string>
    <string name="github_users" translatable="false">GithubUsers</string>
    <string name="raychal_ababil" translatable="false">Raychal Ababil</string>

    <!--Translatable Strings-->
    <string name="change_language_settings">Change Language Settings</string>
    <string name="language">Language</string>
    <string name="no_data_available">No Data Available</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="search">Search</string>
    <string name="search_hint">Input Github Username First..</string>
    <string name="not_have">%1$s Not Have %2$s</string>
    <string name="not_found">User Not Found</string>
    <string name="online">Online</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="ubah_bahasa">Change Languange</string>
    <string name="reminder_time">Reminder at 9:00 AM</string>
    <string name="created_by_raychal_ababil">Created By : Raychal Ababil</string>
    <string name="favorite_add">%s Add To Favorite</string>
    <string name="favorite_remove">%s Remove From Favorite</string>
    <string name="home">Home</string>
    <string name="dark_themes">Dark Themes</string>
    <string name="dark_themes_on">Dark Themes On</string>
    <string name="dark_themes_off">Dark Themes On</string>

    <!--Example String -->
    <string name="exp_login" translatable="false">Login</string>
    <string name="exp_bio" translatable="false">Bio</string>
    <string name="exp_name" translatable="false">Name</string>
    <string name="exp_location" translatable="false">Location</string>
    <string name="exp_company" translatable="false">Company</string>
    <string name="exp_blog" translatable="false">Blog</string>
    <string name="exp_type" translatable="false">Type</string>
    <string name="exp_publicRepos" translatable="false">0</string>
    <string name="exp_followers" translatable="false">1</string>
    <string name="exp_following" translatable="false">2</string>
</resources>