<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="data"
            type="com.raychal.githubusers.model.GithubUser" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.DetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/detail_avatarUrl"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/app_name"
                app:avatar='@{data.avatar_url ?? "" }'
                app:layout_constraintEnd_toStartOf="@id/detail_txt_publicRepos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/ic_user" />

            <TextView
                android:id="@+id/detail_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@{data.type}"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_name"
                tools:text="@string/exp_type" />

            <TextView
                android:id="@+id/detail_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@{data.bio}"
                android:visibility="@{data.bio!=null? View.VISIBLE : View.GONE}"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_type"
                tools:text="@string/exp_bio" />

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@{data.name??data.login}"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_avatarUrl"
                tools:text="@string/exp_name" />

            <TextView
                android:id="@+id/detail_locationCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:text="@{data.location}"
                android:textSize="14sp"
                android:visibility="@{data.location!=null? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_bio"
                tools:text="@string/exp_location"
                app:drawableStartCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/detail_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:text="@{data.company}"
                android:textSize="14sp"
                android:visibility="@{data.company!=null? View.VISIBLE : View.GONE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_locationCity"
                tools:text="@string/exp_company"
                app:drawableStartCompat="@drawable/ic_location_city" />

            <TextView
                android:id="@+id/detail_blog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="6dp"
                android:text="@{data.blog}"
                android:textSize="14sp"
                android:visibility="@{data.blog!=null? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_company"
                tools:text="@string/exp_blog"
                app:drawableStartCompat="@drawable/ic_web" />

            <TextView
                android:id="@+id/detail_txt_publicRepos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/public_repos"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/detail_txt_followers"
                app:layout_constraintStart_toEndOf="@id/detail_avatarUrl"
                app:layout_constraintTop_toBottomOf="@id/detail_publicRepos" />

            <TextView
                android:id="@+id/detail_publicRepos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{String.valueOf(data.publicRepos)}"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/detail_txt_publicRepos"
                app:layout_constraintStart_toStartOf="@id/detail_txt_publicRepos"
                app:layout_constraintTop_toTopOf="@id/detail_avatarUrl"
                tools:text="@string/exp_publicRepos" />
            <TextView
                android:id="@+id/detail_txt_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/follower"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/detail_txt_following"
                app:layout_constraintStart_toEndOf="@id/detail_txt_publicRepos"
                app:layout_constraintTop_toBottomOf="@id/detail_followers" />

            <TextView
                android:id="@+id/detail_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@{String.valueOf(data.followers)}"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/detail_txt_followers"
                app:layout_constraintStart_toStartOf="@id/detail_txt_followers"
                app:layout_constraintTop_toTopOf="@id/detail_publicRepos"
                tools:text="@string/exp_followers" />

            <TextView
                android:id="@+id/detail_txt_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/following"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/detail_txt_followers"
                app:layout_constraintTop_toBottomOf="@id/detail_following" />

            <TextView
                android:id="@+id/detail_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(data.following)}"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/detail_txt_following"
                app:layout_constraintStart_toStartOf="@id/detail_txt_following"
                app:layout_constraintTop_toTopOf="@id/detail_followers"
                tools:text="@string/exp_following" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs"
            app:layout_constraintEnd_toEndOf="parent"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:background="?selectableItemBackground"
            app:srcCompat="@drawable/ic_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/favorite" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>